--- a/APITest/appsettings.Development.json
+++ b/APITest/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "ConnectionString": "Data Source=.;Initial Catalog= StockTW;Persist Security Info=True;TrustServerCertificate=true;User ID= StockTW_only;Password= stocktwonly"
+    "DefaultConnectionString": "Data Source=.;Initial Catalog= StockTW;Persist Security Info=True;TrustServerCertificate=true;User ID= StockTW_only;Password= stocktwonly"
   }
   
 }
