--- a/APITest/appsettings.json
+++ b/APITest/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=.;Initial Catalog= StockTW;Persist Security Info=True;TrustServerCertificate=true;User ID= StockTW_only;Password= stocktwonly"
+  }
 }
